--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ default = ['bevy/dynamic']
 [dependencies]
 bevy_asset_ron = "0.3.1"
 serde = "1.0.136"
+ron = "0.7.0"
 
 [dependencies.bevy]
 version = "0.6.1"
