--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ default = ['bevy/dynamic']
 
 [dependencies]
 bevy_asset_ron = "0.4.0"
-serde = "1.0.137"
-ron = "0.7.0"
+serde = "1.0.138"
+ron = "0.7.1"
 
 [dependencies.hashbrown]
 version = "0.12.1"
@@ -26,12 +26,14 @@ features = ["serde"]
 [dependencies.bevy]
 version = "0.7.0"
 default-features = false
-features = ["bevy_gilrs", "bevy_winit", "render", "png", "hdr", "x11", "filesystem_watcher"]
+features = ["render", "png", "x11"]
 
 [dependencies.bevy_kira_audio]
 version = "0.9.0"
+default-features = false
 features = ["wav"]
 
 [dependencies.uuid]
-version = "1.0.0"
+version = "1.1.2"
+default-features = false
 features = ["v4", "fast-rng", "serde"]
