Add bevy rust arcade support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ default = ['bevy/dynamic']
 
 [dependencies]
 bevy_asset_ron = "0.4.0"
+bevy-rust-arcade = "0.1.0"
 serde = "1.0.138"
 ron = "0.7.1"
 
