--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,16 @@ default = ['bevy/dynamic']
 [dependencies]
 bevy_asset_ron = "0.4.0"
 bevy-rust-arcade = "0.1.0"
-serde = "1.0.138"
+serde = "1.0.139"
 ron = "0.7.1"
 
 [dependencies.bevy]
 version = "0.7.0"
 default-features = false
-features = ["bevy_winit", "render", "png", "x11"]
+features = ["bevy_winit", "render", "png"]
 
 [dependencies.bevy_kira_audio]
-version = "0.9.0"
+version = "0.10.0"
 default-features = false
 features = ["wav"]
 
