--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ git = "https://github.com/rust-arcade/bevy-rust-arcade"
 [dependencies.bevy]
 version = "0.7.0"
 default-features = false
-features = ["bevy_winit", "render", "png"]
+features = ["bevy_winit", "render", "png", "x11"]
 
 [dependencies.bevy_kira_audio]
 version = "0.10.0"
