--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ default = ['bevy/dynamic']
 [dependencies]
 ron = "0.8.0"
 serde = "1.0.147"
+regex = "1.7.0"
 
 [dependencies.bevy]
 version = "0.8.1"
@@ -33,10 +34,19 @@ version = "0.12.0"
 default-features = false
 features = ["wav"]
 
+[dependencies.hashbrown]
+version = "0.13.1"
+features = ["serde"]
+
 [dependencies.iyes_loopless]
 version = "0.7.1"
 default-features = false
 features = ["states", "app"]
+
+[dependencies.uuid]
+version = "1.2.2"
+default-features = false
+features = ["v4", "fast-rng", "serde"]
 
 [profile.dev.package."*"]
 opt-level = 3
