--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 
+env:
+  itch_target: septum/pushin-boxes
+
 jobs:
   release-wasm:
     runs-on: ubuntu-latest
@@ -13,23 +16,31 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          profile: minimal
           target: wasm32-unknown-unknown
           override: true
-      - name: Remove local cargo config
-        run: rm .cargo/config.toml
       - name: Install wasm-bindgen-cli
         run: cargo install wasm-bindgen-cli
       - name: Build
-        run: cargo build --release --target wasm32-unknown-unknown --no-default-features
+        run: cargo build --release --target wasm32-unknown-unknown
       - name: Prepare package
         run: |
           wasm-bindgen --no-typescript --out-name ${{ github.event.repository.name }} --out-dir wasm --target web target/wasm32-unknown-unknown/release/${{ github.event.repository.name }}.wasm
           cp -r assets wasm/
+      - name: Optimize Wasm
+        uses: NiklasEi/wasm-opt-action@v2
+        with:
+          file: wasm/*.wasm
       - name: Package as a zip
         uses: vimtor/action-zip@v1
         with:
           files: wasm
           dest: ${{ github.event.repository.name }}.zip
+      - name: Upload binaries to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: ${{ github.event.repository.name }}.zip
+          name: wasm
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -46,14 +57,14 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          profile: minimal
           target: x86_64-unknown-linux-gnu
           override: true
-      - name: Remove local cargo config
-        run: rm .cargo/config.toml
-      - name: install dependencies
-        run: sudo apt-get update; sudo apt-get install --no-install-recommends pkg-config libx11-dev libasound2-dev libudev-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev
+      - name: Install dependencies
+        run: |
+          sudo apt-get update; sudo apt-get install --no-install-recommends pkg-config libx11-dev libasound2-dev libudev-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev
       - name: Build
-        run: cargo build --release --target x86_64-unknown-linux-gnu --no-default-features
+        run: cargo build --release --target x86_64-unknown-linux-gnu
       - name: Prepare package
         run: |
           mkdir linux
@@ -64,6 +75,11 @@ jobs:
         with:
           files: linux
           dest: ${{ github.event.repository.name }}.zip
+      - name: Upload binaries to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: ${{ github.event.repository.name }}.zip
+          name: linux
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -80,12 +96,11 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          profile: minimal
           target: x86_64-pc-windows-msvc
           override: true
-      - name: Remove local cargo config
-        run: rm .cargo/config.toml
       - name: Build
-        run: cargo build --release --target x86_64-pc-windows-msvc --no-default-features
+        run: cargo build --release --target x86_64-pc-windows-msvc
       - name: Prepare package
         run: |
           mkdir windows
@@ -96,6 +111,11 @@ jobs:
         with:
           files: windows
           dest: ${{ github.event.repository.name }}.zip
+      - name: Upload binaries to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: ${{ github.event.repository.name }}.zip
+          name: windows
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -109,25 +129,40 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Install toolchain for Apple Silicon
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: aarch64-apple-darwin
+          override: true
+      - name: Build release for Apple Silicon
+        run: |
+          SDKROOT=$(xcrun -sdk macosx --show-sdk-path) MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version) cargo build --release --target aarch64-apple-darwin
+      - name: Install toolchain for Apple x86
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           target: x86_64-apple-darwin
           override: true
-      - name: Environment Setup
-        run: |
-          export CFLAGS="-fno-stack-check"
-          export MACOSX_DEPLOYMENT_TARGET="10.9"
-      - name: Remove local cargo config
-        run: rm .cargo/config.toml
       - name: Build
-        run: cargo build --release --target x86_64-apple-darwin --no-default-features
-      - name: Prepare Package
+        run: |
+          SDKROOT=$(xcrun -sdk macosx --show-sdk-path) MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version) cargo build --release --target x86_64-apple-darwin
+      - name: Create universal binary
+        run: |
+          lipo -create -output target/release/${{ github.event.repository.name }} target/aarch64-apple-darwin/release/${{ github.event.repository.name }} target/x86_64-apple-darwin/release/${{ github.event.repository.name }}
+      - name: Create release
         run: |
           mkdir -p ${{ github.event.repository.name }}.app/Contents/MacOS
-          cp target/x86_64-apple-darwin/release/${{ github.event.repository.name }} ${{ github.event.repository.name }}.app/Contents/MacOS/
+          cp target/release/${{ github.event.repository.name }} ${{ github.event.repository.name }}.app/Contents/MacOS/
           cp -r assets ${{ github.event.repository.name }}.app/Contents/MacOS/
+          strip ${{ github.event.repository.name }}.app/Contents/MacOS/${{ github.event.repository.name }}
+          ln -s /Applications ${{ github.event.repository.name }}.app
           hdiutil create -fs HFS+ -volname "${{ github.event.repository.name }}" -srcfolder ${{ github.event.repository.name }}.app ${{ github.event.repository.name }}.dmg
+      - name: Upload binaries to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: ${{ github.event.repository.name }}.dmg
+          name: mac
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -136,3 +171,37 @@ jobs:
           asset_name: ${{ github.event.repository.name }}-macos-${{ github.ref_name }}.dmg
           tag: ${{ github.ref }}
           overwrite: true
+
+  upload-to-itch:
+    runs-on: ubuntu-latest
+    needs:
+      - release-wasm
+      - release-linux
+      - release-windows
+      - release-macos
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: ./builds
+
+      - name: Install butler
+        run: |
+          curl -L -o butler.zip https://broth.itch.ovh/butler/linux-amd64/LATEST/archive/default
+          unzip butler.zip
+          chmod +x butler
+          ./butler -V
+      - uses: little-core-labs/get-git-tag@v3.0.1
+        id: get_version
+      - name: Upload to itch.io
+        env:
+          BUTLER_API_KEY: ${{ secrets.BUTLER_CREDENTIALS }}
+        run: |
+          for channel in $(ls builds); do
+            ./butler push \
+                --fix-permissions \
+                --userversion="${{ github.ref_name }}" \
+                builds/$channel/* \
+                ${{ env.itch_target }}:$channel
+          done
