--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [workspace]
 resolver = "3"
-members = ["crates/game_plugins", "crates/game_ui"]
+members = ["crates/*"]
 
 [workspace.package]
 version = "0.15.1"
 authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
 edition = "2024"
 license = "MIT OR Apache-2.0"
+
+[workspace.dependencies]
+serde = "1.0"
 
 [workspace.dependencies.bevy]
 version = "0.16"
