--- a/crates/game_plugins/Cargo.toml
+++ b/crates/game_plugins/Cargo.toml
@@ -5,9 +5,8 @@ authors.workspace = true
 edition.workspace = true
 license.workspace = true
 
-
 [dependencies]
-game_ui = { path = "../game_ui" }
+bevy_ui_bits = "0.10"
 game_core = { path = "../game_core" }
 ron = "0.10"
 serde = { workspace = true }
